Revert "verify function"
This reverts commit 1c17c3a8e3037e6ce18e95e32f7cecbca8dd4697.
